# rgba-vae

./: .gitignore  LICENSE  README.md  pyproject.toml
src/rgba_vae/: __init__.py  defaultconfig.py  loss.py  train.py  utils.py  vae.py  vaegan.py  vavae.py
src/rgba_vae/modules/: ConNext.py  DoubleConv.py
test/: toydataset.py  train_jsonl.py  train_test.py  vaegan_train.py  vavae_train.py
