[project]
name = "rgba-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Layer-norm", email = "magicianaio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
rgba-vae = "rgba_vae:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
